--- a/src/components/characters/CharacterList.css
+++ b/src/components/characters/CharacterList.css
@@ -1,7 +1,7 @@
 .CharacterList {
   display: grid;
   grid-template:repeat(4, 1fr) / repeat(5, 1fr);
-  justify-content: stretch;
+  align-items: baseline;
   img {
     max-width: 100px;
     border-radius:.3rem;
